# hinomaruwebsite

./: .gitignore  DOCS.md  Dockerfile  README.md  db.sqlite3  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
aboutus/: models.py
aboutus/migrations/: 0001_initial.py
aboutus/templates/aboutus/: about_us_page.html
blog/: models.py
blog/migrations/: 0001_initial.py  0002_blogcategory_blogdetailpage_categories.py  0002_blogdetailpage.py  0003_blogdetailpage_blog_cover_image_and_more.py
blog/templates/blog/: blog_detail_page.html  blog_page.html
blog/templatetags/: custom_filters.py
contact/: models.py  views.py
contact/migrations/: 0001_initial.py  0002_formpagelanding.py  0003_delete_formpagelanding.py
contact/templates/contact/: form_page.html  form_page_landing.html
core/: urls.py  views.py
core/settings/: base.py  dev.py  production.py  storage.py
core/static/css/: about_us.css  core.css  navbar.css  tailwind.css  why.css
core/static/images/: Untitled design - Instagram Post.html
core/static/js/: animations.js  navbar.js  (+2 more)
core/templates/: base.html
home/: models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_menusnippets.py  0003_aboutuspage.py  0003_alter_menusnippets_id.py  0004_carrierspage_privacypolicypage_and_more.py  0005_merge_20250128_1106.py  0005_merge_20250202_0517.py  0006_merge_20250204_0820.py
home/templates/: 404.html  500.html
home/templatetags/: menu_tags.py
news/: models.py
news/migrations/: 0001_initial.py  0002_newsdetailpage.py
(+40 files in other folders)
